<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/camerapreview"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <androidx.cardview.widget.CardView
        android:id="@+id/capture"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/captureImg"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/imagebutton" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/rulesbutton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:text="@string/rules_text"
        app:layout_constraintStart_toStartOf="@+id/previewView"
        app:layout_constraintTop_toTopOf="@+id/previewView" />

    <Button
        android:id="@+id/nextMoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_move_text"
        app:layout_constraintStart_toEndOf="@+id/rulesbutton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>